Landing pages's CSS donr

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="main-flex-container">
@@ -18,87 +19,102 @@
             </div>
             <div class="header-content">
                 <div class="left">
-                    <div class="header-para-bold">
-                        <p>This website is awesome</p>
-                    </div>
-                    <div class="header-para">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, quo? Ducimus vero nam iure eius, assumenda reiciendis distinctio architecto est, corporis velit tenetur dignissimos eum.</p>
-                    </div>
-                    <div class="header-button">
-                        <button>Sign Up</button>
+                    <div>
+                        <p class="header-para-bold">Papa's Burger</p>
+                        <p class="header-para">
+                            Sign up to our webpage to get the details about
+                            our latest offers and the upcoming exciting new
+                            flavours
+                        </p>
+                        <button class="header-button">Sign Up</button>
                     </div>
                 </div>
                 <div class="right">
-                    <img>
+                    <img src="./img/burger.jpeg" alt="a person" width="400px" height="300px">
                 </div>
             </div>
         </div>
         <div class="body-one">
             <div class="body-one-title">
-                <p>Some random information</p>
+                <p>Some Trending Varieties now!</p>
             </div>
             <div class="body-one-content">
                 <div class="box-with-text">
-                    <div class="box"></div> <!-- insert an image -->
+                    <div class="box">
+                        <img src="./img/one.jpeg" alt="burger" width="240px" height="200px">
+                    </div> <!-- insert an image -->
                     <div class="text">
-                        <p>Some text under an image</p>
+                        <p>Hamburger</p>
                     </div>
                 </div>
                 <div class="box-with-text">
-                    <div class="box"></div> <!-- insert an image -->
+                    <div class="box">
+                        <img src="./img/two.jpeg" alt="burger" width="240px" height="200px">
+                    </div> <!-- insert an image -->
                     <div class="text">
-                        <p>Some text under an image</p>
+                        <p>Turkey Burger</p>
                     </div>
                 </div>
                 <div class="box-with-text">
-                    <div class="box"></div> <!-- insert an image -->
+                    <div class="box">
+                        <img src="./img/three.jpeg" alt="burger" width="280px" height="200px">
+                    </div> <!-- insert an image -->
                     <div class="text">
-                        <p>Some text under an image</p>
+                        <p>Lamb Burger</p>
                     </div>
                 </div>
                 <div class="box-with-text">
-                    <div class="box"></div> <!-- insert an image -->
+                    <div class="box">
+                        <img src="./img/four.jpeg" alt="burger" width="280px" height="200px">
+                    </div> <!-- insert an image -->
                     <div class="text">
-                        <p>Some text under an image</p>
+                        <p>Bacon Burger</p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="body-two">
-            <div class="para">
+            <div class="para-review">
                 <p>
-                    This is some inpirational quote or something said by the customer,
-                    or it could be some image or any other things. just here to fill
-                    up the space
+                    Papa's Burger's Hamburger is an absolute delight! As someone who prefers a lighter option, 
+                    the bun-less chicken burger exceeded my expectations. The juicy, tender chicken patty was 
+                    perfectly seasoned and cooked to perfection. The absence of the bun allowed the flavors 
+                    of the fresh veggies and special sauce to shine through, creating a wholesome 
+                    and guilt-free indulgence. The combination of textures and flavors was simply divine. 
+                    I highly recommend the Humburger to anyone looking for a healthier 
+                    yet delicious burger option at Papa's Burger,
+                    Mount Lv. It's a must-try! 
                 </p>
             </div>
             <div class="author">
                 <p>
-                    -Batman, Guardian of Gotham
+                    -Hazik F 
                 </p>
             </div>
         </div>
         <div class="body-three">
-            <div class="body-three-content">
-                <div class="bold-content">
-                    <p>
-                        Call to action!, it's time
-                    </p>
+            <div class="body-three-wrap">
+                <div class="body-three-content">
+                    <div class="bold-content">
+                        <p>
+                            Call to action!, it's time
+                        </p>
+                    </div>
+                    <div class="normal-content">
+                        <p>
+                            Sign up for our product by clicking the button here
+                        </p>
+                    </div>
                 </div>
-                <div class="normal-content">
-                    <p>
-                        Sign up for our product by clicking the button here
-                    </p>
+                <div>
+                    <button class="body-button">Sign Up</button>
                 </div>
-            </div>
-            <div class="body-button">
-                <button>Sign Up</button>
             </div>
         </div>
         <div class="footer">
-            <p>
-                Copyright C The Odin Project 2021
-            </p>
+            <footer class="footer-content">
+                Copyright &copy; The Odin Project 2021
+            </footer>
         </div>
     </div>
 </body>
