Little bit padding changes

--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
             <div class="body-three-wrap">
                 <div class="body-three-content">
                     <div class="bold-content">
-                        <p>
+                        <p class="bold-content-para">
                             Call to action!, it's time
                         </p>
                     </div>
                     <div class="normal-content">
-                        <p>
+                        <p class="normal-content-para">
                             Sign up for our product by clicking the button here
                         </p>
                     </div>
